Update: refactor